# tree-sitter-clispec

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  build.zig  build.zig.zon  go.mod  grammar.js  justfile  package.json  pyproject.toml  setup.py  tree-sitter.json
.flox/: env.json
.flox/env/: manifest.toml
bindings/c/: tree-sitter-clispec.pc.in
bindings/c/tree_sitter/: tree-sitter-clispec.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_clispec/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterClispecTests/: TreeSitterClispecTests.swift
bindings/zig/: root.zig  test.zig
examples/: ls.csp  rm.clispec
queries/: brackets.scm  highlights.scm  indents.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: flags.txt  options.txt  types.txt
